# Web-application-v.2

./: .replit  README.md  app.py  courses.py  home.py  host.py  login.py  pyproject.toml
static/: courses.css  home.css  scripts.js  styles.css
templates/: courses.html  home.html  index.html
