[tool.poetry]
name = "repl-nix-1stprojectrial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_1stprojectrial"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pymysql = "^1.1.1"
pandas = "^2.2.2"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
